--- a/modules/home-manager/common/apps/aerospace/config/aerospace.toml
+++ b/modules/home-manager/common/apps/aerospace/config/aerospace.toml
@@ -24,7 +24,6 @@ cmd-alt-h = [] # Disable "hide others"
 
 alt-semicolon = [
   'mode service',
-  # 'exec-and-forget sketchybar --trigger send_message MESSAGE="Aerospace in Service Mode" HOLD="true"',
 ]
 
 alt-tab = 'workspace-back-and-forth'
@@ -39,26 +38,20 @@ alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
+alt-d = 'workspace D'
 alt-b = 'workspace B'
-alt-f = 'workspace F'
-alt-m = 'workspace M'
 alt-s = 'workspace S'
-alt-t = 'workspace T'
 alt-x = 'workspace X'
 
+alt-shift-d = 'move-node-to-workspace D'
 alt-shift-b = 'move-node-to-workspace B'
-alt-shift-f = 'move-node-to-workspace F'
-alt-shift-m = 'move-node-to-workspace M'
 alt-shift-s = 'move-node-to-workspace S'
-alt-shift-t = 'move-node-to-workspace T'
 alt-shift-x = 'move-node-to-workspace X'
 
 # alt-m = 'exec-and-forget sketchybar --trigger aerospace_switch'
 
 [workspace-to-monitor-force-assignment]
-B = [ 'secondary', 'main' ]
 S = [ 'secondary', 'main' ]
-M = [ 'secondary', 'main' ]
 
 [mode.service.binding]
 esc = [
@@ -82,58 +75,10 @@ equal = 'resize smart +50'
 [[on-window-detected]]
 if.app-id = 'com.mitchellh.ghostty'
 check-further-callbacks = true
-run = ['layout floating', 'move-node-to-workspace T']
-
-[[on-window-detected]]
-if.app-id = 'app.zen-browser.zen'
-check-further-callbacks = true
-run = ['move-node-to-workspace B']
-
-[[on-window-detected]]
-if.app-id = 'app.zen-browser.zen'
-check-further-callbacks = true
-if.window-title-regex-substring = 'Picture-in-Picture'
-run = ['layout floating']
-
-[[on-window-detected]]
-if.app-id = 'com.brave.Browser'
-check-further-callbacks = true
-run = ['move-node-to-workspace B']
-
-[[on-window-detected]]
-if.app-id = 'com.brave.Browser'
-check-further-callbacks = true
-if.window-title-regex-substring = 'Picture-in-Picture'
 run = ['layout floating']
 
 [[on-window-detected]]
 if.app-id = 'net.imput.helium'
 check-further-callbacks = true
-run = ['move-node-to-workspace B']
-
-[[on-window-detected]]
-if.app-id = 'net.imput.helium'
-check-further-callbacks = true
 if.window-title-regex-substring = 'Picture-in-Picture'
 run = ['layout floating']
-
-[[on-window-detected]]
-if.app-id = 'com.google.android.studio'
-check-further-callbacks = true
-run = ['layout tiling', 'move-node-to-workspace X'] 
-
-[[on-window-detected]]
-if.app-id = 'com.apple.finder'
-check-further-callbacks = true
-run = ['layout floating', 'move-node-to-workspace F']
-
-[[on-window-detected]]
-if.app-id = 'com.apple.iphonesimulator'
-check-further-callbacks = true
-run = ['layout floating', 'move-node-to-workspace F']
-
-[[on-window-detected]]
-if.app-name-regex-substring = 'Youtube Music'
-check-further-callbacks = true
-run = ['layout tiling', 'move-node-to-workspace M']
-
