--- a/modules/home-manager/common/apps/aerospace/config/aerospace.toml
+++ b/modules/home-manager/common/apps/aerospace/config/aerospace.toml
@@ -40,13 +40,13 @@ alt-shift-j = 'move down'
 alt-shift-k = 'move up'
 alt-shift-l = 'move right'
 
-alt-d = 'workspace D'
-alt-b = 'workspace B'
+alt-1 = 'workspace 1'
+alt-2 = 'workspace 2'
 alt-s = 'workspace S'
 alt-x = 'workspace X'
 
-alt-shift-d = 'move-node-to-workspace D'
-alt-shift-b = 'move-node-to-workspace B'
+alt-shift-1 = 'move-node-to-workspace 1'
+alt-shift-2 = 'move-node-to-workspace 2'
 alt-shift-s = 'move-node-to-workspace S'
 alt-shift-x = 'move-node-to-workspace X'
 
