--- a/modules/home-manager/common/apps/aerospace/config/aerospace.toml
+++ b/modules/home-manager/common/apps/aerospace/config/aerospace.toml
@@ -42,13 +42,15 @@ alt-shift-l = 'move right'
 
 alt-1 = 'workspace 1'
 alt-2 = 'workspace 2'
+alt-3 = 'workspace 3'
+alt-4 = 'workspace 4'
 alt-s = 'workspace S'
-alt-x = 'workspace X'
 
 alt-shift-1 = 'move-node-to-workspace 1'
 alt-shift-2 = 'move-node-to-workspace 2'
+alt-shift-3 = 'move-node-to-workspace 3'
+alt-shift-4 = 'move-node-to-workspace 4'
 alt-shift-s = 'move-node-to-workspace S'
-alt-shift-x = 'move-node-to-workspace X'
 
 [workspace-to-monitor-force-assignment]
 S = [ 'secondary', 'main' ]
