--- a/modules/home-manager/common/apps/aerospace/config/aerospace.toml
+++ b/modules/home-manager/common/apps/aerospace/config/aerospace.toml
@@ -22,54 +22,28 @@ inner.vertical = 8
 cmd-h = []     # Disable "hide application"
 cmd-alt-h = [] # Disable "hide others"
 
-alt-semicolon = ['mode service']
-
-alt-slash = 'layout tiles accordion'
-alt-comma = 'layout horizontal vertical'
-
-alt-shift-h = 'move left'
-alt-shift-j = 'move down'
-alt-shift-k = 'move up'
-alt-shift-l = 'move right'
-
-alt-1 = 'workspace 1'
-alt-2 = 'workspace 2'
-alt-3 = 'workspace 3'
-alt-4 = 'workspace 4'
-alt-s = 'workspace S'
-
-f1 = 'workspace 1'
-f2 = 'workspace 2'
-f3 = 'workspace 3'
-f4 = 'workspace 4'
-
-f20 = ['exec-and-forget ~/.config/aerospace/aerospace-preset']
-f19 = ['layout floating tiling']
-f17 = ['workspace --wrap-around next']
-
+shift-ctrl-alt-cmd-semicolon = ['mode service']
+shift-ctrl-alt-cmd-slash = 'layout tiles accordion'
+shift-ctrl-alt-cmd-comma = 'layout horizontal vertical'
 
 shift-ctrl-alt-cmd-1 = ['workspace 1']
 shift-ctrl-alt-cmd-2 = ['workspace 2']
 shift-ctrl-alt-cmd-3 = ['workspace 3']
-shift-ctrl-alt-cmd-4 = ['workspace 4']
+ctrl-alt-1 = ['move-node-to-workspace 1']
+ctrl-alt-2 = ['move-node-to-workspace 2']
+ctrl-alt-3 = ['move-node-to-workspace 3']
 
 shift-ctrl-alt-cmd-f = ['layout floating tiling']
 shift-ctrl-alt-cmd-a = ['workspace-back-and-forth']
-shift-ctrl-alt-cmd-n = ['workspace --wrap-around next']
-
-shift-ctrl-alt-cmd-h = 'focus left'
-shift-ctrl-alt-cmd-j = 'focus down'
-shift-ctrl-alt-cmd-k = 'focus up'
-shift-ctrl-alt-cmd-l = 'focus right'
-
-alt-shift-1 = 'move-node-to-workspace 1'
-alt-shift-2 = 'move-node-to-workspace 2'
-alt-shift-3 = 'move-node-to-workspace 3'
-alt-shift-4 = 'move-node-to-workspace 4'
-alt-shift-s = 'move-node-to-workspace S'
+shift-ctrl-alt-cmd-space = ['workspace --wrap-around next']
 
 [workspace-to-monitor-force-assignment]
-S = ['secondary', 'main']
+1 = 'main'
+2 = 'main'
+3 = 'main'
+S = ['pm1402', 'main']
+L = ['built-in', 'main']
+Z = 'main'
 
 [mode.service.binding]
 esc = ['reload-config', 'mode main']
@@ -87,31 +61,30 @@ equal = 'resize smart +50'
 [[on-window-detected]]
 if.app-id = 'net.imput.helium'
 check-further-callbacks = true
-if.window-title-regex-substring = 'Picture-in-Picture'
-run = ['layout floating']
-
-[[on-window-detected]]
-if.app-id = 'net.imput.helium'
-check-further-callbacks = true
-if.window-title-regex-substring = 'YouTube|Frigate'
-run = ['move-node-to-workspace S']
+if.window-title-regex-substring = 'YouTube'
+run = ['move-node-to-workspace L']
 
 [[on-window-detected]]
 if.app-id = 'com.spotify.client'
 check-further-callbacks = true
-run = ['layout floating', 'move-node-to-workspace 3']
-
-[[on-window-detected]]
-if.app-id = 'com.openai.chat'
-check-further-callbacks = true
-run = ['layout floating']
+run = ['layout floating', 'move-node-to-workspace S']
 
 [[on-window-detected]]
 if.app-id = 'com.apple.reminders'
 check-further-callbacks = true
-run = ['layout floating', 'move-node-to-workspace 3']
+run = ['layout floating']
 
 [[on-window-detected]]
 if.app-id = 'com.apple.MobileSMS'
 check-further-callbacks = true
-run = ['layout floating', 'move-node-to-workspace 3']
+run = ['layout floating', 'move-node-to-workspace S']
+
+[[on-window-detected]]
+if.app-id = 'com.raycast.macos'
+check-further-callbacks = false
+run = ['layout floating']
+
+[[on-window-detected]]
+if.app-id = 'us.zoom.xos'
+check-further-callbacks = false
+run = ['layout floating', 'move-node-to-workspace Z']
