--- a/modules/home-manager/common/apps/aerospace/config/aerospace.toml
+++ b/modules/home-manager/common/apps/aerospace/config/aerospace.toml
@@ -36,6 +36,7 @@ ctrl-alt-3 = ['move-node-to-workspace 3']
 shift-ctrl-alt-cmd-f = ['layout floating tiling']
 shift-ctrl-alt-cmd-a = ['workspace-back-and-forth']
 shift-ctrl-alt-cmd-space = ['workspace --wrap-around next']
+shift-ctrl-alt-cmd-r = ['exec-and-forget /Users/ctso/.config/aerospace/aerospace-preset']
 
 [mode.service.binding]
 esc = ['reload-config', 'mode main']
