chore(aerospace): add focus up/down

--- a/modules/home-manager/common/apps/aerospace/config/aerospace.toml
+++ b/modules/home-manager/common/apps/aerospace/config/aerospace.toml
@@ -28,6 +28,8 @@ shift-ctrl-alt-cmd-1 = ['workspace 1']
 shift-ctrl-alt-cmd-2 = ['workspace 2']
 shift-ctrl-alt-cmd-3 = ['workspace 3']
 shift-ctrl-alt-cmd-h = ['focus left']
+shift-ctrl-alt-cmd-j = ['focus down']
+shift-ctrl-alt-cmd-k = ['focus up']
 shift-ctrl-alt-cmd-l = ['focus right']
 ctrl-alt-1 = ['move-node-to-workspace 1']
 ctrl-alt-2 = ['move-node-to-workspace 2']
